@startuml
class Score {
}
class Part {
Score : score
int: idx
Instrument : instrument
}
class Staff {
Part : part
int : id
Map[Onset, Dynamic] : dynamics
}
class Event {
Staff : staff
Fraction : onset
}
class Clef {
ClefType: clef_type
int : octave
}
class KeySignature {
int : fifths
bool : minor
}
class TimeSignature {
int : beats
int : beat_type
bool: symbolic
}
class OctaveShift {
Staff : staff
Fraction : onset
Fraction : offset
Octavation : octavation
}
class Measure {
Part: part
Fraction : onset
}
interface Site {
}
class Voice {
Part : part
int : id
}
class Tuplet {
Fraction : onset
int : normal_count
int : actual_count
NoteType : actual_type
int : actual_dots
}
abstract class Element {
Site : site
NoteType : note_type
int : dots
}
abstract class ChordRest {
Event : event
BeamGroup : beam_group
bool: fermata
}
class Chord {
Stem : stem
List[Expression] : expressions
}
class Rest {
Fraction : nominal_duration
}
class GraceChord {
Chord : chord
int : index
NoteType : note_type
int : dots
Stem : stem
BeamGroup : beam_group
List[Expression] : expressions
}
class Note {
Chord | GraceChord : chord
NoteName : note_name
int : octave
int : pitch
Accidental : accidental
}
class BeamGroup {
Voice : voice
}


Score "*" *-- Part
Part "id" *-- Staff
Part "id" *-- Voice
Staff "onset" *-- Event
Staff "onset" *-- Clef
Staff "onset" *-- KeySignature
Staff "onset" *-- TimeSignature
Staff "onset" *-- OctaveShift
Part "onset" *-- Measure
Voice -[hidden] BeamGroup
Site <|-- Voice
Site <|-- Tuplet
Event "voice" *-- ChordRest
BeamGroup "*" o-- ChordRest
BeamGroup "*" o-- GraceChord
Element <|-- Tuplet
Voice "onset" *-- Element
Tuplet "onset" *-- Element
Element <|-- ChordRest
ChordRest <|-- Chord
ChordRest <|-- Rest
Chord "*" *-- Note
Note "2" o-- Note
Chord "*" *-- GraceChord
GraceChord "*" *-- Note
@enduml